--- a/appdl.json
+++ b/appdl.json
@@ -4,13 +4,13 @@
     {
       "status":"0",
       "link":"http://",
-      "pengaturan_iklan":"0",
+      "pengaturan_iklan":"2",
       "admob_open_ads":"ca-app-pub-5456136783183193/7845077064",
       "admob_banner":"ca-app-pub-5456136783183193/7783892533",
       "admob_inter":"ca-app-pub-5456136783183193/9901121112",
       "admob_native":"ca-app-pub-5456136783183193/2784322076",
       "interval":5,
-      "appodeal_apikey":"",
+      "appodeal_apikey":"3647f120913001459b2275abbaacea19bae0791de459fc21",
       "startappid":"",
       "mopub_banner":"",
       "mopub_inter":""
